--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -13,15 +13,15 @@ description: "Get up and running with Triform in 5 minutes"
 1. Go to [app.triform.ai](https://app.triform.ai)
 2. Click **Sign in with Discord** or **Sign in with GitHub**
 3. Authorize Triform
-4. You'll land in your workspace
+4. You'll land in the **Builder workspace**
 
 ## Step 2: Create your first Flow
 
 Let's build a simple workflow using Triton:
 
-1. Click in the **Chat Panel** at the bottom
+1. Click in the **Chat Panel** at the bottom (or press Cmd/Ctrl+K)
 2. Type: _"Build me a Flow that summarizes the latest news from HackerNews"_
-3. Watch Triton plan, create, and connect the components
+3. Watch Triton plan, create, and connect the components on the Canvas
 
 ## Step 3: Execute your Flow
 
@@ -31,15 +31,21 @@ Let's build a simple workflow using Triton:
 4. Click **Execute**
 5. View the results in the output panel
 
+## Step 4: Use your agent in Chat
+
+1. Click the **Chat** workspace toggle in the Top Bar
+2. Enable your project in the right panel
+3. Start conversing with your agent
+
 ## Next steps
 
-- **Modify** — Ask Triton to add more Actions or Agents
+- **Modify** — Switch back to Builder and ask Triton to add more Actions or Agents
 - **Deploy** — Make your Flow accessible via API
 - **Explore** — Check execution history and logs
 
 ## Need help?
 
-- Ask Triton directly in the Chat Panel
+- Ask Triton directly in the Chat Panel (Builder workspace)
 - Join our [Discord community](https://discord.gg/triform)
 - See the [Workspace Overview](/getting-started/workspace-overview) for interface details
 
