--- a/getting-started/workspace-overview.mdx
+++ b/getting-started/workspace-overview.mdx
@@ -1,25 +1,47 @@
 ---
 title: "Workspace Overview"
-description: "Navigate the interface: Top Bar, Canvas, Chat, Properties"
+description: "Navigate the interface: Chat workspace, Builder workspace, and Top Bar"
 ---
 
-## The workspace
+## Two workspaces
 
-**Top Bar** — Navigation, breadcrumbs, and deploy  
-**Canvas** — Visual workspace where you build  
-**Chat Panel** — Triton, your AI assistant  
-**Properties Panel** — Configuration, inputs, and execution
+Triform has two main workspaces, each optimized for different activities:
 
-## Basic interactions
+### Chat Workspace
 
-**Click** — Select a node  
-**Double-click** — Open a node (Project/Flow/Agent)  
-**Right-click** — Context menus
+**For using and interacting with your agents**
 
-## Quick start
+- Conversational interface for talking with agents
+- Chat history to manage conversations
+- Project selector to enable agent capabilities
+- Similar experience to ChatGPT or other chat tools
 
-1. Create a Project or Flow on the Canvas
-2. Or ask Triton to build something for you
-3. Execute with a test payload from Properties → Execute
+### Builder Workspace
 
-> tip: Try building a Flow with Input → Action (returns a message) → Output. Execute it with a simple JSON payload to verify your setup.
+**For designing and building your AI systems**
+
+- Visual Canvas where you compose nodes and flows
+- Chat Panel with Triton, your AI building assistant
+- Properties Panel for configuration and execution
+- Tools for creating and debugging components
+
+## Top Bar
+
+The top bar is shared across both workspaces and provides:
+- **Workspace switcher** — Toggle between Chat and Builder
+- **Navigation** — Breadcrumbs and project selection
+- **Deploy controls** — Publish your work
+
+## Getting started
+
+### To build something new:
+1. Go to the **Builder workspace**
+2. Create components on the Canvas or ask Triton for help
+3. Configure and test using the Properties Panel
+
+### To use your agents:
+1. Go to the **Chat workspace**
+2. Enable relevant projects in the right panel
+3. Start conversing with your agent
+
+> tip: Build in Builder, use in Chat. Most development happens in Builder; most conversations happen in Chat.
