--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Welcome"
 description: "Triform overview and quickstart"
 ---
 
-Triform is a visual platform for building, running, and monitoring AI-powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** by just chatting with it.
+Triform is a visual platform for building, running, and monitoring AI-powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** by just chatting with it, then **use your agents** in a dedicated Chat interface.
 
 ## Who this is for
 
@@ -14,10 +14,10 @@ Triform is a visual platform for building, running, and monitoring AI-powered sy
 ## Quickstart
 
 1. **Sign in** at [app.triform.ai](https://app.triform.ai) with Discord or GitHub
-2. You land in your first **Project** with the **Canvas** open
+2. You land in your first **Project** in the **Builder workspace**
 3. **Chat** with Triton and ask him to build something
 4. **Watch** Triton plan, build, and test your solution
-5. **Execute** it from the **Chat** panel
+5. **Switch** to the **Chat workspace** to use your agent conversationally
 
 > tip: Start with a Flow: _"Build me a news gatherer that collects news from Swedish sources and summarizes them"_. Execute with a test payload to verify your setup.
 
@@ -33,11 +33,12 @@ Triform is a visual platform for building, running, and monitoring AI-powered sy
 **Organizations** — Top-level ownership and access  
 **Projects** — Focused workspaces inside an Organization  
 **Library** — Reusable building blocks (Actions, Flows, etc.)  
-**Builder** — The visual surface where you design and debug
-**Chat** — The chat interface where you can use and share your creations
+**Builder** — The visual workspace where you design and debug  
+**Chat** — The conversational workspace where you use and share your creations
 
 ## Need help?
 
-- Use the Chat Panel in the Builder and talk to Triton to create, connect, or run components
+- In **Builder**: Use the Chat Panel and talk to Triton to create, connect, or run components
+- In **Chat**: Enable the right projects and converse with your agents
 - Invite teammates from Profile → Organization → View
 - Share feedback anytime—your input shapes our roadmap
