--- a/triton/overview.mdx
+++ b/triton/overview.mdx
@@ -9,7 +9,9 @@ Triton is Triform's built-in AI assistant that helps you build, modify, and debu
 
 ## Where to find Triton
 
-Triton lives in the **Chat Panel** at the bottom of your workspace. Click the chat icon or press `Cmd+K` (Mac) / `Ctrl+K` (Windows) to open it.
+Triton lives in the **Chat Panel** at the bottom of the **Builder workspace**. Click the chat icon or press `Cmd+K` (Mac) / `Ctrl+K` (Windows) to open it.
+
+> note: Triton is for **building** your systems. To **use** your agents conversationally, switch to the **Chat workspace** from the Top Bar.
 
 ## What Triton can do
 
