--- a/tutorials/build-a-new-project.mdx
+++ b/tutorials/build-a-new-project.mdx
@@ -23,13 +23,13 @@ In this tutorial, you'll build a **News Aggregator Project** that collects artic
 4. Add description: `Collects and summarizes news from multiple sources`
 5. Click **Create**
 
-Your Canvas now shows an empty Project node.
+Your Canvas in the Builder workspace now shows an empty Project node.
 
 ## Step 2: Build the fetch Action
 
 Let's create an Action to fetch news from an API:
 
-1. Open the Chat Panel
+1. Open the Chat Panel (Triton) at the bottom
 2. Say: _"Create an Action called `fetch_news` that takes a source URL and returns a list of articles"_
 3. Triton will generate the Action with:
    - Input: `source_url` (string)
