--- a/tutorials/edit-a-specific-component.mdx
+++ b/tutorials/edit-a-specific-component.mdx
@@ -15,7 +15,7 @@ Actions are Python functions with inputs, outputs, and dependencies.
 
 ### Opening an Action
 
-1. Double-click the Action node on the Canvas
+1. In the **Builder workspace**, double-click the Action node on the Canvas
 2. The Properties Panel shows:
    - **Content tab** — Code editor for `Action.py`
    - **Input/Output tab** — Schema definition
