--- a/tutorials/edit-an-existing-project.mdx
+++ b/tutorials/edit-an-existing-project.mdx
@@ -13,9 +13,9 @@ This tutorial covers how to safely modify existing Projects, whether you created
 
 1. Navigate to **Home** in the Top Bar
 2. Find your Project in the Projects list
-3. Click to open it on the Canvas
+3. Click to open it in the **Builder workspace**
 
-You'll see the Project's component graph.
+You'll see the Project's component graph on the Canvas.
 
 ## Step 2: Understand the structure
 
