--- a/workspace/chat-panel.mdx
+++ b/workspace/chat-panel.mdx
@@ -1,7 +1,14 @@
 ---
 title: "Chat Panel (Triton)"
-description: "Conversational interface to author, wire, run, and explain"
+description: "Conversational interface in Builder to author, wire, run, and explain"
 ---
+
+## What is the Chat Panel
+
+The Chat Panel in the **Builder workspace** provides access to Triton, your AI assistant for building and designing systems. This is different from the **Chat workspace**, which is for using and conversing with your completed agents.
+
+**Builder Chat Panel (Triton)** — Build, wire, debug  
+**Chat Workspace** — Use and converse with agents
 
 ## What you can do
 
@@ -19,4 +26,4 @@ description: "Conversational interface to author, wire, run, and explain"
 
 - Triton posts status messages when it performs changes or runs tasks.
 
-> tip: Be explicit — Include component names and ports in your messages to avoid ambiguity and speed up Triton’s actions.
+> tip: Be explicit — Include component names and ports in your messages to avoid ambiguity and speed up Triton's actions.
