--- a/workspace/top-bar.mdx
+++ b/workspace/top-bar.mdx
@@ -1,7 +1,17 @@
 ---
 title: "Top Bar"
-description: "Navigation breadcrumbs, profile, and deploy controls"
+description: "Navigation, workspace switcher, breadcrumbs, profile, and deploy controls"
 ---
+
+## What you see
+
+The top bar is consistent across both the Chat and Builder workspaces, providing global navigation and controls.
+
+## Workspace Switcher
+
+- Toggle between **Chat** and **Builder** workspaces
+- Chat: for using and conversing with agents
+- Builder: for designing and building systems
 
 ## Breadcrumbs
 
